style: fix weird clipping

--- a/src/static/client.css
+++ b/src/static/client.css
@@ -9,9 +9,7 @@ html, body {
     width: 100%;
     margin: 0;
     padding: 0;
-}
-body {
-    border-radius: 20px;
+    clip-path: inset(0 round 20px);
 }
 #status {
     position: absolute;
